# pulsar-map-noise-estimates

./: README.md  add_to_model.py  environment.yml  pyproject.toml
src/pulsar_map_noise_estimates/: map_noise_estimate.py
