[project]
authors = [{name = "David Wright", email = "dcw3.dev@gmail.com"}]
name = "pulsar-map-noise-estimates"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = [ "jax>=0.8.0,<0.9", "numpyro>=0.19.0,<0.20", "optax>=0.2.6,<0.3"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
pulsar_map_noise_estimates = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.13.*"
loguru = ">=0.7.3,<0.8"
pint-pulsar = ">=1.1.4,<2"
numpy = ">=2.3.5,<3"
